# digiprinter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
digiprinter/: __init__.py  config.py
digiprinter/envs/: __init__.py  multi_agent.py  observations.py  renderer.py  rewards.py  single_agent.py  wrappers.py
digiprinter/gcode/: interpreter.py  library.py  parser.py
digiprinter/materials/: __init__.py  abs.py  base.py  nylon.py  petg.py  pla.py  tpu.py
digiprinter/physics/: cooling.py  extrusion.py  motion.py  quality.py  thermal.py
digiprinter/printer/: hardware.py  state.py
digiprinter/simulation/: engine.py  events.py  time_stepper.py
digiprinter/utils/: math_helpers.py
docs/: physics_models.md
runs/sac/: evaluations.npz
runs/sac_v2/: evaluations.npz
scripts/: benchmark_physics.py  evaluate_agent.py  gui.py  train_curriculum.py  train_multi_agent.py  train_single_agent.py
tests/: test_extrusion.py  test_gcode.py  test_motion.py  test_multi_agent_env.py  test_quality.py  test_single_agent_env.py  test_thermal.py
tests/fixtures/: simple_cube.gcode
