[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digiprinter"
version = "0.1.0"
description = "Physics-based digital twin of the Prusa Core One+ 3D printer for RL training"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "gymnasium>=0.29",
    "stable-baselines3>=2.1",
    "pettingzoo>=1.24",
    "ray[rllib]>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.entry-points."gymnasium.envs"]
__root__ = "digiprinter.envs:register_envs"

[tool.setuptools.packages.find]
include = ["digiprinter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
